 * Improved Import screen, added "Test Import" option

2006-12-06 tmb
 * Added placeholders for new eprint types

2006-12-06
 * Added broad strokes of Pubmed XML and Pubmed ID import plugins (needs 
    refining later)

2006-12-06 moj
 * Switched pages->pagerange

2006-12-07 cjg
 * Fixed issue with no columns in items and review

2006-12-07 cjg
 * Added a clear error if an unknown export plugin is called from the search.
 * Fixed bug that a failed login caused it to forget where we were going.
 * Added (!) warning box for "there is a newer version" messages and 
    improved phrasing.

2006-12-08 cjg
 * Fixed a bug that workflow fields ignored required param
 * Fixed the some confusion that required was "1" in the fields config and
    "yes" in workflow.

2006-12-10 cjg
 * Added lookup scripts to use files and directories.
 * Added an empty autocomplete directory.

2006-12-10 cjg
 * Added new metadata type : multilang
 * Subject now uses multilang rather than the hack
 * Removed lots of old multilang code.
 * Made up/down arrows on multiple input css style nowrap.

2006-12-11 cjg
 * Added a note about cookies being needed.

2006-12-11 cjg
 * XML subject import now ok.
 * PubMedXML now only imports eprints, not all types.

2006-12-11 cjg
 * Fixed bug that export buffer exported all datasets

2006-12-11 cjg
 * De-centered abstracts.

2006-12-11 cjg
 * Fixed validate jump links for user area validate fields.

2006-12-11 cjg
 * Friendly error for owner of eprint on denied screens.

2006-12-11 cjg
 * Added generate_static, import_subjects and generate_apacheconf to 
    epadmin create and erase_data

2006-12-11 moj
 * Added maxdelta to password change mail_sent phrase
 * Changed confirmation email to put link around 'active password'.

2006-12-11 moj
 * Fixed 'to name' in RequestDeletion email (was not being converted
    from DOM to string).

2006-12-11 moj
 * Updated RequestDeletion to use the nicer mail format, and reworded
    email to avoid 'click here'.